# EdgeOneDynamicOrigin

./: .gitignore  Dockerfile  README.md  Readme.md  config.example.yaml  main.py  pyproject.toml  requirements.txt  webui.py  win_iptable.py
.github/workflows/: docker-publish.yml
src/: main.py  webui.py
src/eodo/: app.py  config.example.yaml  main.py  task.py  webui.py
src/eodo/static/: index.html
